--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,12 @@
     <color name="BtnColor">#8B008B</color>
     <color name="TextBoxColor">#F8E4FC</color>
     <color name="LinkColor">#0A7BC1</color>
+
+
+    <color name="BlackColour">#020202</color>
+    <color name="Ash">#E3D5D5</color>
+    <color name="Red">#E50808</color>
+    <color name="white">#FFFFFF</color>
+
+
 </resources>
