--- a/app/src/main/res/layout/activity_admin_bookings.xml
+++ b/app/src/main/res/layout/activity_admin_bookings.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".admin_bookings">
 
+
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/bookinglist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.baoyz.swipemenulistview.SwipeMenuListView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
