--- a/app/src/main/res/layout/activity_admin_drivers.xml
+++ b/app/src/main/res/layout/activity_admin_drivers.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".admin_drivers">
 
+
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/driverslist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.baoyz.swipemenulistview.SwipeMenuListView>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
