--- a/app/src/main/res/layout/activity_my_route.xml
+++ b/app/src/main/res/layout/activity_my_route.xml
@@ -59,7 +59,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="My Added Routes"
-        android:textColor="@color/BlackColour"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/editText6"
