--- a/app/src/main/res/layout/activity_passenger.xml
+++ b/app/src/main/res/layout/activity_passenger.xml
@@ -73,7 +73,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/welcome"
         android:textAlignment="center"
-        android:textColor="@color/BlackColour"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,14 +81,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textAlignment="center"
         android:id="@+id/textView25"
         android:layout_width="148dp"
         android:layout_height="31dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/rating"
-        android:textColor="@color/BlackColour"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView28"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,7 +96,6 @@
         app:layout_constraintStart_toEndOf="@+id/textView28" />
 
     <TextView
-        android:textAlignment="center"
         android:id="@+id/textView28"
         android:layout_width="148dp"
         android:layout_height="31dp"
@@ -104,7 +103,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="@string/myprofile"
-        android:textColor="@color/BlackColour"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,14 +112,14 @@
         app:layout_constraintVertical_bias="0.102" />
 
     <TextView
-        android:textAlignment="center"
         android:id="@+id/textView27"
         android:layout_width="148dp"
         android:layout_height="31dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/mybookings"
-        android:textColor="@color/BlackColour"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView26"
         app:layout_constraintEnd_toEndOf="parent"
@@ -127,14 +127,14 @@
         app:layout_constraintStart_toEndOf="@+id/textView26" />
 
     <TextView
-        android:textAlignment="center"
         android:id="@+id/textView26"
         android:layout_width="148dp"
         android:layout_height="31dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="12dp"
         android:text="@string/bookNow"
-        android:textColor="@color/BlackColour"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton9" />
