--- a/app/src/main/res/layout/user_register.xml
+++ b/app/src/main/res/layout/user_register.xml
@@ -81,13 +81,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="368dp"
-        android:layout_height="66dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/RegTitle"
         android:textAlignment="center"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
-        android:textStyle="normal"
+        android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.627"
         app:layout_constraintLeft_toLeftOf="parent"
