--- a/app/src/main/res/layout/activity_admin_routes.xml
+++ b/app/src/main/res/layout/activity_admin_routes.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".admin_routes">
 
+    <com.baoyz.swipemenulistview.SwipeMenuListView
+        android:id="@+id/routelist"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.baoyz.swipemenulistview.SwipeMenuListView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
