--- a/app/src/main/res/layout/activity_admin_settings.xml
+++ b/app/src/main/res/layout/activity_admin_settings.xml
@@ -43,6 +43,7 @@
             android:layout_marginLeft="100dp"
             android:layout_marginRight="100dp"
             android:background="@color/colorPrimary"
+            android:onClick="UpdateSuccessfulymsg"
             android:text="@string/updateBtn"
             android:textAllCaps="false"
             android:textColor="@color/colorAccent"
