--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -42,6 +42,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginBottom="50dp"
             android:text="Route No"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintStart_toStartOf="parent" />
@@ -53,6 +54,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginBottom="50dp"
             android:text="End Time"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintStart_toStartOf="parent" />
@@ -64,6 +66,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginBottom="48dp"
             android:text="Start time"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent" />
@@ -76,6 +79,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="50dp"
             android:text="From"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/textview"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +93,7 @@
             android:layout_marginStart="28dp"
             android:layout_marginBottom="50dp"
             android:text="to"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,7 +101,7 @@
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="256dp"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -106,12 +111,12 @@
             android:textSize="24sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.914"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView3" />
 
         <EditText
             android:id="@+id/editText3"
-            android:layout_width="0dp"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -135,14 +140,14 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textview"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.833"
-            app:layout_constraintStart_toEndOf="@+id/textview" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/textview"
+            tools:layout_editor_absoluteY="180dp" />
 
         <EditText
             android:id="@+id/editText5"
-            android:layout_width="0dp"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -157,7 +162,7 @@
 
         <EditText
             android:id="@+id/editText4"
-            android:layout_width="257dp"
+            android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
@@ -165,10 +170,10 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.214"
-            app:layout_constraintStart_toEndOf="@+id/textView2" />
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/textView2"
+            tools:layout_editor_absoluteY="262dp" />
 
         <TextView
             android:id="@+id/textView6"
