--- a/app/src/main/res/layout/activity_admin_drivers.xml
+++ b/app/src/main/res/layout/activity_admin_drivers.xml
@@ -10,7 +10,8 @@
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/driverslist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent">
 
     </com.baoyz.swipemenulistview.SwipeMenuListView>
 
