--- a/app/src/main/res/layout/activity_admin_pasengers.xml
+++ b/app/src/main/res/layout/activity_admin_pasengers.xml
@@ -9,7 +9,8 @@
     <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/passengerlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent">
 
     </com.baoyz.swipemenulistview.SwipeMenuListView>
 
