--- a/app/src/main/res/layout/activity_admin_settings.xml
+++ b/app/src/main/res/layout/activity_admin_settings.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:background="@color/colorAccent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
