--- a/app/src/main/res/layout/activity_my_route.xml
+++ b/app/src/main/res/layout/activity_my_route.xml
@@ -4,32 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     tools:context=".My_route">
 
     <EditText
         android:id="@+id/editText6"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:background="#F8E4FC"
         android:ems="10"
         android:inputType="textPersonName"
+        android:text="Route_1"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.997" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="508dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="176dp"
         android:background="#8C278B"
         android:onClick="Update"
         android:text="Update"
@@ -48,7 +52,7 @@
         android:textColor="#FAFFFFFF"
         app:layout_constraintBaseline_toBaselineOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toEndOf="@+id/button2" />
 
     <TextView
