--- a/app/src/main/res/layout/activity_admin_settings.xml
+++ b/app/src/main/res/layout/activity_admin_settings.xml
@@ -23,8 +23,8 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:ems="10"
+            android:hint="Enter New Password"
             android:inputType="textPersonName"
-            android:text="Enter New Password"
             android:textColor="@color/colorPrimaryDark" />
 
         <EditText
@@ -33,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:ems="10"
+            android:hint="Enter Current Password"
             android:inputType="textPersonName"
-            android:text="Enter Current Password"
             android:textColor="@color/colorPrimaryDark" />
 
         <Button
