--- a/app/src/main/res/layout/activity_my_route.xml
+++ b/app/src/main/res/layout/activity_my_route.xml
@@ -8,7 +8,7 @@
     tools:context=".My_route">
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/CrdHoldName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -66,7 +66,7 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editText6"
+        app:layout_constraintBottom_toTopOf="@+id/CrdHoldName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
