--- a/app/src/main/res/layout/activity_select_seat.xml
+++ b/app/src/main/res/layout/activity_select_seat.xml
@@ -174,7 +174,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView11" />
 
         <EditText
-            android:id="@+id/editText13"
+            android:id="@+id/Email"
             android:layout_width="208dp"
             android:layout_height="29dp"
             android:layout_marginStart="8dp"
@@ -243,7 +243,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView13" />
 
         <EditText
-            android:id="@+id/editText14"
+            android:id="@+id/ConNo"
             android:layout_width="208dp"
             android:layout_height="29dp"
             android:layout_marginStart="8dp"
@@ -257,7 +257,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView10" />
 
         <EditText
-            android:id="@+id/editText12"
+            android:id="@+id/Name"
             android:layout_width="208dp"
             android:layout_height="29dp"
             android:layout_marginStart="8dp"
