--- a/app/src/main/res/layout/activity_admin_add_route.xml
+++ b/app/src/main/res/layout/activity_admin_add_route.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin_add_route">
+    tools:context=".AdminRoute.admin_add_route">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/admin_from"
+                android:id="@+id/admin_from_ud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -64,12 +64,13 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/admin_to"
+                android:id="@+id/admin_to_ud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:textAllCaps="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -89,7 +90,7 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/admin_stime"
+                android:id="@+id/admin_stime_ud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -115,7 +116,7 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/admin_etime"
+                android:id="@+id/admin_etime_ud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -140,7 +141,7 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/admin_rnumber"
+                android:id="@+id/admin_rnumber_ud"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -149,7 +150,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/admin_addroute_btn"
+            android:id="@+id/admin_uproute_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
