--- a/app/src/main/res/layout/user_password_reset.xml
+++ b/app/src/main/res/layout/user_password_reset.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.422" />
 
     <EditText
-        android:id="@+id/admin_from"
+        android:id="@+id/admin_from_ud"
         android:layout_width="330dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
@@ -77,7 +77,7 @@
         app:layout_constraintVertical_bias="0.645" />
 
     <EditText
-        android:id="@+id/admin_rnumber"
+        android:id="@+id/admin_rnumber_ud"
         android:layout_width="330dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
