--- a/app/src/main/res/layout/activity_admin_payments.xml
+++ b/app/src/main/res/layout/activity_admin_payments.xml
@@ -11,10 +11,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/AdminPayAdd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="go"
+            android:text="add" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/admin_pay_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
